--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -1,7 +1,7 @@
 name: "AppScan CodeSweep"
 on:
-  push:
-    branches: ["main"]
+  pull_request:
+    branches: [ main ]
 jobs:
   scan:
     runs-on: ubuntu-latest
