Update appscan.yml to only scan python files

--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -2,6 +2,8 @@ name: "AppScan CodeSweep"
 on:
   pull_request:
     branches: [ main ]
+    paths:
+      - '**/*.py'
 jobs:
   scan:
     runs-on: ubuntu-latest
