--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -1,7 +1,7 @@
 name: "AppScan CodeSweep"
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
     paths:
       - '**/*.py'
 jobs:
